Ajustes de info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW eSport</title>
 
+    <link rel="shortcut icon" href="./José Souza.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -14,7 +15,7 @@
 
     <header>
         <div>
-            <img src="https://github.com/soulsouza.png" alt="Foto de José Souza, com fone branco">
+            <img src="https://github.com/soulsouza.png" alt="Foto de José Souza">
         </div>
     </header>
 
