--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW eSport</title>
 
-    <link rel="shortcut icon" href="./assets/Souza.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/jose_souza.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -60,7 +60,7 @@
                     </li>
                     <li>
                         <a target="_blank" href="https://www.twitch.tv/alanzoka">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-150x150.png"
+                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/64d44235-1dee-4bca-95da-bee1ee96eea3-profile_image-70x70.png"
                                 alt="Imagem de Minecraft">
                         </a>
                     </li>
