--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW eSport</title>
 
-    <link rel="shortcut icon" href="./assets/jose_souza.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/joseSouza.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
 </head>
 
